<resources>
    <string name="app_name">MyStories</string>
    <string name="message_login_page">Silahkan Login</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Nama</string>
    <string name="password">Password</string>
    <string name="name_hint">Masukkan Nama</string>
    <string name="email_hint">Masukkan Email</string>
    <string name="password_hint">Masukkan Password</string>
    <string name="no_account">Belum punya akun? Daftar disni</string>
    <string name="email_error">Bagian ini harus diisi</string>
    <string name="password_error">Password tidak sesuai</string>
    <string name="logout">Log Out</string>
    <string name="username">Username</string>
    <string name="title_signup_page">Lengkapi data Anda</string>
    <string name="login_success">Login Berhasil</string>
    <string name="login_error">Login gagal</string>
    <string name="register_success">Register Berhasil</string>
    <string name="register_error">Register gagal</string>
    <string name="date">Mei 5, 2023</string>
    <string name="description">Register gagal</string>
    <string name="error_rv">Error membuat list data</string>
    <string name="add">Add Story</string>
    <string name="select_image">Piih gambar</string>
    <string name="save">Simpan</string>
    <string name="galeri">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="retry">Coba Lagi</string>
</resources>